--- a/Day2/star1.html
+++ b/Day2/star1.html
@@ -3,9 +3,9 @@
 	<body>
 		<meta charset="utf-8">
 		<script src="https://en.js.cx/test/libs.js"></script>
-        <!-- <input type="file" id="file-input" /> -->
+        <input type="file" id="file-input" />
         <h3>Contents of the file:</h3>
         <pre id="file-content"></pre>
-        <script src="readFromAoCFile.js"></script>
+        <script src="star1.js"></script>
 	</body>
 </html>
